[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
jsonrpsee = { version = "0.13.0", features = ["server"] }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"] }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"]  }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"]  }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
# TODO not sure about the version
sp-keystore = { version = "0.12.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }

sha3 = { version = "0.10.0" }
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
async-trait = { version = "0.1" }
log = "0.4"
parking_lot = "0.10.0"
futures = "0.3"
structopt = "0.3"

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# Local Dependencies
crain-pow = { path = "../pow" }
crain-runtime = { version = "4.0.0-dev", path = "../runtime" }
crain-primitives = { path = "../primitives" }
crain-pow-consensus = { path = "../pow/consensus" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
# TODO uncomment these two?
default = []
# default = ["std"]
# std = [
# 	"parity-scale-codec/std",
# ]
wasmtime = [
	"sc-executor/wasmtime",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]
runtime-benchmarks = ["crain-runtime/runtime-benchmarks"]
