[package]
name = "crain-pow"
version = "2.9.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = "0.4"
lru-cache = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1.4"
parking_lot = "0.10.0"
humantime = "2.0.1"
once_cell = "1.5"
async-trait = "0.1.42"
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git"}
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-application-crypto = { version = "6.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
crain-primitives = { path = "../primitives" }
crain-runtime = { path = "../runtime" }
crain-randomx = { path = "randomx" }
crain-pow-consensus = { path = "consensus" }
