[package]
name = "crain-primitives"
version = "2.9.0"
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }


[features]
default = ["std"]
std = ["sp-core/std", "sp-api/std", "codec/std"]
