[package]
name = "crain-primitives"
version = "2.9.0"
license = "GPL-3.0-or-later"
authors = ["CREESTL creestl.job@yandex.ru"]
edition = "2021"

[dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }

[features]
default = ["std"]
std = [
	"sp-core/std", 
	]


