[package]
name = "crain-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-consensus-pow = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = {  version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git"}
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
# Primitive types and constants for Crain
crain-primitives = { path = "../primitives", default-features = false }

# FRAME
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-nicks = { default-features = false, git = "https://github.com/paritytech/substrate.git" }
# Local Dependencies
pallet-difficulty = { path = "../pallets/difficulty", default-features = false }
pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
hex-literal = { version = "0.3.4", optional = true }

frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false}
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-version/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-offchain/std",
	"sp-consensus-pow/std",
	"sp-session/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-try-runtime/std",
	"frame-executive/std",
	"crain-primitives/std",

	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-nicks/std",

	"pallet-difficulty/std",
	
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",

	"scale-info/std",

	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]