[package]
name = "crain-pow-consensus"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>", "Wei Tang <wei@that.world>"]
description = "PoW consensus for Kulupu"
edition = "2018"
license = "GPL-3.0-or-later"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git"}
sp-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
log = "0.4.8"
futures = "0.3.16"
futures-timer = "3.0.1"
parking_lot = "0.11.1"
derive_more = "0.99.2"
prometheus = { package = "substrate-prometheus-endpoint",version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
async-trait = "0.1.50"
